changing branch to test

--- a/.codecatalyst/workflows/Workflow_code_manager.yaml
+++ b/.codecatalyst/workflows/Workflow_code_manager.yaml
@@ -5,7 +5,7 @@ SchemaVersion: "1.0"
 Triggers:
   - Type: PUSH
     Branches:
-      - ws\/.*
+      - code-manager
 
 # Required - Define action configurations.
 Actions:
